--- a/app/templates/go.html
+++ b/app/templates/go.html
@@ -17,6 +17,7 @@
                     <li class="list-group-item list-group-item-dark text-center">{{category.replace('_', ' ').title()}}</li>
                 {% endif %}
             {% endfor %}
+            <li><a href="https://github.com/ksekara/disaster_response">Contact</a></li>
 
         </div>
     </div>
