--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -62,6 +62,7 @@
     {% for id in ids %}
         <div id="{{id}}"></div>
     {% endfor %}
+    <li><a href="https://github.com/ksekara/disaster_response">Contact</a></li>
 </div>
 
 <script type="text/javascript">
